# good-measure-giving

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  TODOS.md  firebase.json  firestore.rules  package-lock.json  package.json  pyproject.toml  rich_charities.txt  start_dev.sh
.claude/: settings.json
.claude/commands/: analytics.md
data-pipeline/: .gitignore  CLAUDE.md  LOGGING_STANDARDS.md  README.md  autoprompt.py  baseline.py  charity_report.py  charity_report_html.py  crawl.py  debug_breakdown.py  dolt_schema.sql  export.py  extract.py  judge_phase.py  ofac_prescreen.py  pilot_charities.txt  rich_charities.txt  rich_narrative.py  rich_phase.py  rich_strategic_phase.py  run_v2.sh  streaming_runner.py  synthesize.py
data-pipeline/config/: charity_categories.yaml  cost_benchmarks.yaml  curation_overrides.yaml  data_sources.yaml  llm_config.yaml  page_prompts.yaml  prompt_annotations.yaml  rubric_archetypes.yaml  scoring_weights.yaml  ui_signals.yaml
data-pipeline/data/: muslim_org_overrides.yaml
data-pipeline/docs/: infrastructure-upgrade-plan.md  pipeline-orchestration-policy.md
data-pipeline/migrations/: add_judge_content_hash.py  add_judge_error_warning_counts.py  export_supabase.py  import_dolt.py  regenerate_dolt_schema.py
data-pipeline/scripts/: audit_beneficiary_plausibility.py  score_comparison.py
data-pipeline/src/: baseline_scorer.py  config.py  constants.py  judge.py
data-pipeline/tests/: conftest.py  test_baseline_prompt.py  test_baseline_quality_claim_currency.py  test_beneficiary_semantics_verifier.py  test_beneficiary_source_gating.py  test_bounds_validator.py  test_budget_guardrail.py  test_cause_area.py  test_cn_format_drift.py  test_cn_new_format.py  test_crawl_politeness.py  test_crawler_cache.py  test_cross_source_corroboration.py  test_data_completeness_new_org.py  test_deep_link_resolver.py  test_discovery_service_robustness.py  test_display_name.py  test_dolt_commit_tables.py  test_evaluation_repository.py  test_export.py  test_export_beneficiary_gate.py  test_export_display.py  test_export_gating.py  test_export_pruning.py  test_form990_grants_collector.py  test_hallucination_denylist.py  test_json_repair.py  test_judge_content_hash.py  test_judge_counts.py  test_judge_dedupe.py  test_judge_phase.py  test_judges.py  test_llm_client_json_schema.py  test_model_config.py  test_parsers.py  test_quality_judges_strictness.py  test_raw_data_repository.py  test_reconciliation.py  test_revenue_trajectory.py  test_scoring_audit.py  (+9 more)
docs/: SCORING_RUBRIC.md  charity-data-corrections.md  remove-hrs.lua  report-template.typ  scores_amal.csv  scores_strategic_believer.csv  scores_traditional_zakat.csv  shared-plans-local-dogfood.md
docs/charity-reports/: gmg-score-report-23-7065716-islamic-society-of-greater-houston.html  gmg-score-report-23-7065716-islamic-society-of-greater-houston.md  gmg-score-report-82-2995347-bloom-charity-nfp.html  gmg-score-report-82-2995347-bloom-charity-nfp.md  gmg-score-report-95-4453134-islamic-relief-usa.html  gmg-score-report-95-4453134-islamic-relief-usa.md
docs/review-packet/: 00-reviewer-brief.md  (+7 more)
scripts/: cloudflare_analytics.py  feedback_admin.py  firestore_analytics.py  pmf_analysis.py
website/: .env.example  .env.production  .gitignore  App.providers.test.tsx  App.tsx  DEPLOYMENT.md  README.md  entry-server.test.tsx  entry-server.tsx  index.css  index.html  index.tsx  package-lock.json  package.json  playwright.config.ts  playwright.shared.config.ts  tsconfig.json  types.ts  vite.config.ssr.ts  vite.config.ts  wrangler.jsonc
(+802 files in other folders)
